--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,3 +17,5 @@ Remotes:
 Depends: 
     R (>= 2.10)
 RoxygenNote: 7.2.3
+URL: https://github.com/sebsilas/singmpi
+BugReports: https://github.com/sebsilas/singmpi/issues
