--- a/inst/config.yml
+++ b/inst/config.yml
@@ -6,9 +6,16 @@ default:
   no_examples: 0
   skip_setup: TRUE
 
-production:
+prod:
   musicassessr_aws: TRUE
   no_melodies: 2
-  no_long_notes: 6
+  no_long_tones: 6
   no_examples: 2
   skip_setup: FALSE
+
+prod_quick:
+  musicassessr_aws: TRUE
+  no_melodies: 2
+  no_long_tones: 2
+  no_examples: 0
+  skip_setup: TRUE
